# QMyo

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
include/: MyoExample.h  QMyo.h  myohw.h
src/: MyoExample.cpp  QMyo.cpp  main.cpp
